Fixing signup scroll on mobile

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -131,7 +131,7 @@ html, body {
       height: 290px;
     }
     .right-section {
-      height: calc(100vh - 350px);
+      height: calc(100vh - 380px);
     }
   }
   .button-container {
